Moved the UI back to the old setup (tracking UI with a link to the map of the pre-recorded track).  Updated the swiftlint configuration and fixed swiftlint issues.

--- a/GeoTrackKitExample/.swiftlint.yml
+++ b/GeoTrackKitExample/.swiftlint.yml
@@ -1,8 +1,21 @@
 included:
+  - ./
   - ../GeoTrackKit/
 
+excluded:
+  - Pods
+
 disabled_rules:
-    - line_length
-    - file_length
+  - line_length
+  - todo
+
+function_body_length:
+    - 80
+
+file_length:
+  warning: 500
+
+vertical_whitespace:
+  max_empty_lines: 3
 
 reporter: "xcode"
