Updated documentation and readme (with new screenshots - animated gifs).

--- a/.jazzy.yaml
+++ b/.jazzy.yaml
@@ -2,7 +2,7 @@ module: GeoTrackKit
 author: Eric Internicola
 author_url: http://intere.github.io
 github_url: https://github.com/intere/GeoTrackKit
+min_acl: internal
 copyright: "© 2016-2017 [Eric Internicola](http://intere.github.io)"
 clean: true
-podspec: ../GeoTrackKit.podspec
-swift_version: 3.0
+podspec: GeoTrackKit.podspec
