--- a/GeoTrackKitExample/GeoTrackKitExample/Info.plist
+++ b/GeoTrackKitExample/GeoTrackKitExample/Info.plist
@@ -2,10 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>We use location services to create tracks for you. We only use location services when you explicitly ask us to.</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>We use location services to create tracks for you. We only use location services when you explicitly ask us to.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -24,7 +20,11 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>We use location services to create tracks for you. We only use location services when you explicitly ask us to.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
+	<string>We use location services to create tracks for you. We only use location services when you explicitly ask us to.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>We use location services to create tracks for you. We only use location services when you explicitly ask us to.</string>
 	<key>UIBackgroundModes</key>
 	<array>
@@ -41,6 +41,7 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
