--- a/GeoTrackKitExample/GeoTrackKitExample.xcodeproj/xcshareddata/xcschemes/GeoTrackKitExample.xcscheme
+++ b/GeoTrackKitExample/GeoTrackKitExample.xcodeproj/xcshareddata/xcschemes/GeoTrackKitExample.xcscheme
@@ -27,7 +27,17 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "9F2AE4413CE29DF93F43571A3285F9BA"
+            BuildableName = "GeoTrackKit.framework"
+            BlueprintName = "GeoTrackKit"
+            ReferencedContainer = "container:Pods/Pods.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
