Read Track from HealthKit (#10)
* Created (and added) the Example App Icon.

* Building blocks for reading a track from HealthKit.

* First pass at slurping geo data from HealthKit.

* I need to clean this all up, but I've got a working POC now.  I'm able to pull in tracks from HealthKit Workouts.  It still seems like some tracks are missing points, but I'm not sure how / why.  I have to investigate and see if I can come up with anything.

* One more minor UI update.

* Fixed the missing track point issue and the sorting of the list of workouts.  Also addressed a couple of PR comments.

* Addressed PR comment about adding error callbacks.

* Added a bunch of comments.

* Updated the changelog, readme and podspec.

* Refactored the GeoTrackKitErrors slightly.

--- a/GeoTrackKitExample/GeoTrackKitExample/Info.plist
+++ b/GeoTrackKitExample/GeoTrackKitExample/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>CFBundleDisplayName</key>
+	<string>GeoTrackKit</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -15,11 +17,13 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.1.1</string>
+	<string>0.3.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSHealthShareUsageDescription</key>
+	<string>Access to your workout data is required to import tracks from activities that have an associated geo track.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>We use location services to create tracks for you. We only use location services when you explicitly ask us to.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
