--- a/GeoTrackKitExample/Podfile
+++ b/GeoTrackKitExample/Podfile
@@ -1,13 +1,13 @@
 # Uncomment the next line to define a global platform for your project
 
-platform :ios, '9.0'
+platform :ios, '11.0'
 
 target 'GeoTrackKitExample' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
 
   # Pods for GeoTrackKitExample
-  pod 'GeoTrackKit', :path => '..'
+  pod 'GeoTrackKit', :subspecs => ['HealthKit'], :path => '..'
 
   target 'GeoTrackKitExampleTests' do
     inherit! :search_paths
