Pulled in Cartography (not using yet) and RangeSeekSlider (which I'm using) to allow the user to select sections of their track to show / hide.

--- a/GeoTrackKitExample/Podfile
+++ b/GeoTrackKitExample/Podfile
@@ -8,6 +8,8 @@ target 'GeoTrackKitExample' do
 
   # Pods for GeoTrackKitExample
   pod 'GeoTrackKit', :subspecs => ['HealthKit'], :path => '..'
+  pod 'Cartography'
+  pod 'RangeSeekSlider'
 
   target 'GeoTrackKitExampleTests' do
     inherit! :search_paths
