Swapped out the GPX file (the other one was too slow) and wired up the SQLite persistence store to the iOS Example app.  For some reason, the watch app isn't receiving background location updates.  I need to figure that out.

--- a/GeoTrackKitExample/GeoTrackKitExample.xcodeproj/xcshareddata/xcschemes/WatchExample.xcscheme
+++ b/GeoTrackKitExample/GeoTrackKitExample.xcodeproj/xcshareddata/xcschemes/WatchExample.xcscheme
@@ -68,7 +68,7 @@
          </BuildableReference>
       </RemoteRunnable>
       <LocationScenarioReference
-         identifier = "../Resources/BerthoudSolo.gpx"
+         identifier = "../Resources/BerthoudPass.gpx"
          referenceType = "0">
       </LocationScenarioReference>
    </LaunchAction>
