--- a/GeoTrackKitExample/GeoTrackKitExample.xcodeproj/xcshareddata/xcschemes/GeoTrackKitExample.xcscheme
+++ b/GeoTrackKitExample/GeoTrackKitExample.xcodeproj/xcshareddata/xcschemes/GeoTrackKitExample.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1100"
-   version = "1.3">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -80,6 +80,10 @@
             ReferencedContainer = "container:GeoTrackKitExample.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <LocationScenarioReference
+         identifier = "../Resources/BerthoudPass.gpx"
+         referenceType = "0">
+      </LocationScenarioReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
