--- a/GeoTrackKitExample/GeoTrackKitExample.xcodeproj/xcshareddata/xcbaselines/36C45E541DCE2D3500E87710.xcbaseline/Info.plist
+++ b/GeoTrackKitExample/GeoTrackKitExample.xcodeproj/xcshareddata/xcbaselines/36C45E541DCE2D3500E87710.xcbaseline/Info.plist
@@ -4,6 +4,37 @@
 <dict>
 	<key>runDestinationsByUUID</key>
 	<dict>
+		<key>48B07382-21A5-4CDE-967D-74A3C1C5F8FB</key>
+		<dict>
+			<key>localComputer</key>
+			<dict>
+				<key>busSpeedInMHz</key>
+				<integer>100</integer>
+				<key>cpuCount</key>
+				<integer>1</integer>
+				<key>cpuKind</key>
+				<string>Intel Core i7</string>
+				<key>cpuSpeedInMHz</key>
+				<integer>4000</integer>
+				<key>logicalCPUCoresPerPackage</key>
+				<integer>8</integer>
+				<key>modelCode</key>
+				<string>iMac17,1</string>
+				<key>physicalCPUCoresPerPackage</key>
+				<integer>4</integer>
+				<key>platformIdentifier</key>
+				<string>com.apple.platform.macosx</string>
+			</dict>
+			<key>targetArchitecture</key>
+			<string>x86_64</string>
+			<key>targetDevice</key>
+			<dict>
+				<key>modelCode</key>
+				<string>iPhone12,1</string>
+				<key>platformIdentifier</key>
+				<string>com.apple.platform.iphonesimulator</string>
+			</dict>
+		</dict>
 		<key>5422C459-DF2A-4F7A-9FD9-2847FF79A439</key>
 		<dict>
 			<key>localComputer</key>
