:construction_worker: Updated TravisCI to use Xcode 12.5.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: objective-c
-osx_image: xcode11.2
+osx_image: xcode12.5
 
 script:
+  - rvm ruby-2.6.6 do rvm gemset create GeoTrackKit
   - bundle exec fastlane test
 
 notifications:
