--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,7 +1,6 @@
 included:
-  - ../GeoTrackKit
-  - ./
-  - ../GeoTrackKitExampleTests
+  - GeoTrackKit
+  - GeoTrackKitExample
 
 line_length: 120
 function_body_length: 80
